--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,11 @@
     h1 {
       color: red;
     }
+    li {
+      font-family: sans-serif;
+      color:red;
+    }
+    
   </head>
   <body>
 <h1>Hello World!</h1>
