--- a/EnverCreek.html
+++ b/EnverCreek.html
@@ -13,12 +13,40 @@
    display: block;
    margin: auto;
    }
+   table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
 </style>
-
 <h1>Enver Creek Secondary School</h1>
 <img src="https://pbs.twimg.com/profile_images/651808496359374848/XPvSdheO.png" alt="Enver Creek">
 <p>Enver Creek is a High School located at 84 ave in Surrey BC.Enver Creek was built in 1997 and it is a big school. </p>
 <p>Their are 71 staff members in Enver Creek and the staff is polite and nice.</p>
-
+<table style="width:100%">
+  <caption>Enver Creek schedule</caption>
+  <tr>
+    <td>Monday</td>
+    <td>8:30am to 2:53pm</td>
+  </tr>
+  <tr>
+    <td>Tuesday</td>
+    <td>8:30am to 2:53pm</td>
+  </tr>
+  <tr>
+    <td>Wednesday</td>
+    <td>8:30am to 2:13pm</td>
+  </tr>
+   <tr>
+    <td>Thursday</td>
+    <td>8:30am to 2:53pm</td>
+  </tr>
+  <tr>
+   <td>friday</td>
+   <td>8:30am to 2:53pm</td>
+</table>
 </body>
 </html>
