--- a/teams.html
+++ b/teams.html
@@ -26,7 +26,15 @@
      </div>
      <div class="article">
          <h1>Basketball</h1>
-     <p> Enver Creek Basketball team have a lot of tallented players who always push to their limits to get the win.
+     <p> Enver Creek Basketball team have a lot of tallented players who always push to their limits to get the win. 
+     </div> 
+     <div class="article">
+         <h1>Robotics</h1>
+     <p> Enver Creek Robotics team has won a lot of award in championships. 
+     </div>
+     <div class="article">
+         <h1>Soccer</h1>
+     <p> soccer is one of our finest sports we have a lot of students who participate in this sport.
      </div>
      <div class="footer">
      <p>Contact Us: 6045678443</p>
