--- a/teams2.html
+++ b/teams2.html
@@ -39,13 +39,15 @@
 .menu li:hover {
     background-color: #0099cc;
 }
+img {
+	float: center;
+}
 </style>
 </head>
 <body>
 <div class="header">
   <h1>Enver Creek Secondary School</h1>
 </div>
-
 <div class="clearfix">
   <div class="column menu">
     <ul>
@@ -55,8 +57,9 @@
       <li>The Food</li>
     </ul>
   </div>
-  <div class="column content">
   <img src="https://pbs.twimg.com/profile_images/651808496359374848/XPvSdheO.png" alt="Enver Creek">
+  <div class="column content">
+  
     <h1>Welcome</h1>
     <p>Enver Creek is a High School located at 84 ave in Surrey BC.Enver Creek was built in 1997 and it is a big school.</p>
     <p>Their are 71 staff members in Enver Creek and the staff is polite and nice.</p>
