--- a/teams.html
+++ b/teams.html
@@ -2,41 +2,91 @@
 <html>
 <head>
 <style>
-    .title,.footer {
-    width: 100%;
-    height:60px;
-    background-color: Black;
-    text-align: center;
-    color:white;
-    font-family: impact;
-    }
-    .article {
+article{
+	margin-left: 170px
+    border-left: 1px solid black;
+    padding: 1em;
+    overflow: hidden;
+}
+  .article {
      width: 100%;
     height:100px;
-    background-color: red;
+    background-color: teal;
     text-align: center;
     color:white;
     font-family: impact;
     }
+* {
+    box-sizing: border-box;
+}
+.header, .footer {
+    background-color: maroon;
+    color: white;
+    padding: 15px;
+}
+.column {
+    float: left;
+    padding: 15px;
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.menu {
+    width: 25%;
+}
+.content {
+    width: 75%;
+}
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.menu li {
+    padding: 8px;
+    margin-bottom: 8px;
+    background-color: #33b5e5;
+    color: #ffffff;
+}
+.menu li:hover {
+    background-color: #0099cc;
+}
 </style>
 </head>
 <body>
-     <div class="title">
-        <h1>Enver Creek Teams</h1>
-     </div>
-     <div class="article">
-         <h1>Basketball</h1>
+<div class="header">
+  <h1>Enver Creek School</h1>
+</div>
+
+<div class="clearfix">
+  <div class="column menu">
+    <ul>
+      <li>Basketball</li>
+      <li>Robotics</li>
+      <li>Soccer</li>
+    </ul>
+  </div>
+<article>
+  <div class="article">
+    <h1>Basketball</h1>
      <p> Enver Creek Basketball team have a lot of tallented players who always push to their limits to get the win. 
-     </div> 
-     <div class="article">
-         <h1>Robotics</h1>
-     <p> Enver Creek Robotics team has won a lot of award in championships. 
-     </div>
-     <div class="article">
-         <h1>Soccer</h1>
-     <p> soccer is one of our finest sports we have a lot of students who participate in this sport.
-     </div>
-     <div class="footer">
-     <p>Contact Us: 6045678443</p>
-     </div>
+  </div>
+   <div class="article">
+    <h1>Robotics</h1>
+     <p>  Enver Creek Robotics team has won a lot of award in championships.
+     
+  </div> <div class="article">
+    <h1>Soccer</h1>
+     <p>
+     soccer is one of our finest sports we have a lot of students who participate in this sport.
+  </div>
+  </article>
+</div>
+<div class="footer">
+  <p>Contact us:</p>
+  <p>604-535-8765</p>
+</div>
+</body>
 </html>
