--- a/teams.html
+++ b/teams.html
@@ -58,34 +58,31 @@ article{
 <body>
 <div class="header">
   <h1>Enver Creek School</h1>
-</div>
-
+	</div>
 <div class="clearfix">
   <div class="column menu">
     <ul>
-      <li>Basketball</li>
-      <li>Robotics</li>
-      <li>Soccer</li>
+      <li><a href="https://jattdaputt.github.io/EnverCreek.html">Home</p></a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Robotics">Robotics</p></a></li>
+     <li><a href="https://en.wikipedia.org/wiki/Association_football">Soccer</p></a></li>
     </ul>
   </div>
 <article>
   <div class="article">
     <h1>Basketball</h1>
-     <p> Enver Creek Basketball team have a lot of tallented players who always push to their limits to get the win. 
+    <p> Enver Creek Basketball team have a lot of tallented players who always push to their limits to get the win.  
   </div>
    <div class="article">
     <h1>Robotics</h1>
      <p>  Enver Creek Robotics team has won a lot of award in championships.
-     
   </div> <div class="article">
     <h1>Soccer</h1>
-     <p>
-     soccer is one of our finest sports we have a lot of students who participate in this sport.
+     <p>  soccer is one of our finest sports we have a lot of students who participate in this sport.  
   </div>
   </article>
 </div>
 <div class="footer">
-  <p>Contact us:</p>
+ <p>Contact us:</p>
   <p>604-535-8765</p>
 </div>
 </body>
