--- a/EnverCreek.html
+++ b/EnverCreek.html
@@ -19,6 +19,10 @@ th, td {
     padding: 5px;
     text-align: left;
 }
+<div class="header">
+  <h1>Enver Creek School</h1>
+</div>
+
 </style>
 <h1>Enver Creek Secondary School</h1>
 <img src="https://pbs.twimg.com/profile_images/651808496359374848/XPvSdheO.png" alt="Enver Creek">
@@ -45,6 +49,19 @@ th, td {
   <tr>
    <td>friday</td>
    <td>8:30am to 2:53pm</td>
+   <div class="header">
+  <h1>Enver Creek School</h1>
+</div>
+
+<div class="clearfix">
+  <div class="column menu">
+    <ul>
+      <li><a href="https://jattdaputt.github.io/EnverCreek.html">Home</p></a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Robotics">Enver Creek Teams</p></a></li>
+     <li><a href="https://en.wikipedia.org/wiki/Association_football">Soccer</p></a></li>
+     
+    </ul>
+  </div>
 </table>
 </body>
 </html>
