--- a/teams.html
+++ b/teams.html
@@ -63,7 +63,7 @@ article{
   <div class="column menu">
     <ul>
       <li><a href="https://jattdaputt.github.io/EnverCreek.html">Home</p></a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Robotics">Teams</p></a></li>
+      <li><a href="https://jattdaputt.github.io/teams.html">Teams</p></a></li>
      <li><a href="https://jattdaputt.github.io/OVO.html">Songs</p></a></li>
     </ul>
   </div>
