--- a/OVO.html
+++ b/OVO.html
@@ -78,9 +78,14 @@ img {
     <td>If You're Reading This It's Too Late</td>
     <td>Drake</td>
      <td><a href="https://genius.com/Drake-energy-lyrics">Link</a></td>
-       
+      <div class="clearfix">
+  <div class="column menu">
+       <ul>
+      <li><a href="https://jattdaputt.github.io/EnverCreek.html">Home</p></a></li>
+      <li><a href="https://jattdaputt.github.io/teams.html">Teams</p></a></li>
+        </ul>
+  </div>
   </tr>
 </table>
-
 </body>
 </html>
