--- a/EnverCreek.html
+++ b/EnverCreek.html
@@ -54,6 +54,7 @@ th, td {
 <div class="clearfix">
   <div class="column menu">
     <ul>
+     <li><a href="https://jattdaputt.github.io/EnverCreek.html">Home</p></a></li>
       <li><a href="https://jattdaputt.github.io/teams.html">Enver Creek Teams</p></a></li>
      <li><a href="https://jattdaputt.github.io/OVO.html">songs</p></a></li>
     </ul>
