--- a/OVO.html
+++ b/OVO.html
@@ -83,6 +83,7 @@ img {
        <ul>
       <li><a href="https://jattdaputt.github.io/EnverCreek.html">Home</p></a></li>
       <li><a href="https://jattdaputt.github.io/teams.html">Teams</p></a></li>
+<li><a href="https://jattdaputt.github.io/OVO.html">Teams</p></a></li>
         </ul>
   </div>
   </tr>
