--- a/moviepicker.html
+++ b/moviepicker.html
@@ -1,3 +1,8 @@
+<DOCTYPE html>
+  <head>
+  </head>
+  <body>
+    <script>
 var ready = prompt("Are you ready? (Yes or No)").toUpperCase();
 if (ready === 'YES') {
   part1()
@@ -34,3 +39,5 @@ function part2() {
     }
     }
   }
+    </script>
+  </body>
