--- a/moviepicker.html
+++ b/moviepicker.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<html>
   <head>
-  </head>
-  <body>
+    <body>
     <script>
 var ready = prompt("Are you ready? (Yes or No)").toUpperCase();
 if (ready === 'YES') {
@@ -39,5 +39,7 @@ function part2() {
     }
     }
   }
+      <body>
+      </head>
     </script>
   </body>
